kubernetes-manifests/chat.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-external
spec:
  type: LoadBalancer
  selector:
    app: chat
  ports:
    - name: http
      port: 80
      targetPort: 8080
