kubernetes-manifests/chat.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: m10lchat-external3
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: YOURHOSTNAME
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: chat-svc
            port:
              number: 80
